--- a/landing/css/style.css
+++ b/landing/css/style.css
@@ -787,10 +787,10 @@ ul {
     margin: auto;
 }
 
-#site-features {
+/* #site-features {
     margin: auto;
     font-size: 14pt;
-}
+} */
 
 
 #drifting-desc {
