--- a/landing/css/style.css
+++ b/landing/css/style.css
@@ -96,7 +96,7 @@ section {
     line-height: 45px;
 }
 .navbar-default {
-	background-color: #222;
+	background-color: rgba(34, 34, 34, 0);
 	border-color: transparent
 }
 .navbar-default .navbar-brand {
@@ -105,14 +105,14 @@ section {
     padding: 0px;
 }
 .navbar-default .navbar-brand:hover,.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:active,.navbar-default .navbar-brand.active {
-	color: #fec503
+	color: #84C8FF
 }
 .navbar-default .navbar-collapse {
 	border-color: rgba(255,255,255,.02)
 }
 .navbar-default .navbar-toggle {
-	background-color: #fed136;
-	border-color: #fed136
+	background-color: rgba(254, 207, 54, 0);
+	border-color: rgba(254, 207, 54, 0)
 }
 .navbar-default .navbar-toggle .icon-bar {
 	background-color: #fff
@@ -143,7 +143,18 @@ section {
 	background-color: #fec503
 }
 
+@media (max-width: 768px) {
+    .navbar-brand {
+        display: none;
+    }
+}
+
+
 @media (min-width:768px) {
+    .navbar-brand {
+        color: rgba(0,0,0,0);
+    }
+
 	.navbar-default
 	{
 		background-color: transparent;
@@ -157,7 +168,7 @@ section {
 		font-size: 2em;
 		-webkit-transition:all .3s;
 		-moz-transition:all .3s;
-		transition:all .3s
+		transition:all .3s;
 	}
 	.navbar-default .navbar-nav>.active>a {
 		border-radius: 3px
@@ -167,7 +178,7 @@ section {
 		padding: 10px 0
 	}
 	.navbar-default.navbar-shrink .navbar-brand {
-		font-size: 1.5em
+		font-size: 1.5em;
 	}
 }
 
@@ -176,9 +187,10 @@ section {
 --------------------*/
 
 header {
-    background-image: url(../images/bg-main.jpg);
+    /*background-image: url(../images/bg-main.jpg);*/
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/d/d9/Sailing_Boat_Horizon.JPG");
     background-repeat: none;
-    background-attachment: scroll;
+    background-attachment: fixed;
     background-position: center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -188,8 +200,12 @@ header {
     color: #fff;
     text-shadow: 2px 2px #808080;
 
-
 }
+
+#header-overlay {
+    background-color: rgba(145, 220, 255, 0.44);
+}
+
 
 header .intro-text {
     padding-top: 100px;
@@ -222,14 +238,14 @@ header .intro-text .intro-lead-in {
 }
 
 header .intro-text .intro-heading {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 50px;
+     text-transform: uppercase;
+    /*font-weight: 700 */;
+    font-size: 70px;
     line-height: 50px;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
 	header .intro-text .intro-heading {
 	    text-transform: uppercase;
 	    font-weight: 700;
@@ -237,7 +253,7 @@ header .intro-text .intro-heading {
 	    line-height: 75px;
 	    margin-bottom: 50px;
 	}
-}
+} */
 
 /*--------------------
 4. Sections
@@ -716,15 +732,17 @@ font-size: 11px;
 }
 
 .btn-xl {
-    color: #fff;
-     background-color: #726FB9;
-    border-color: #726FB9;
+    /* color: #414141; */
+    background-color: #FFFFFF;
+    /* border-color: #726FB9; */
     font-family: "Robot",sans-serif;
     text-transform: uppercase;
-    font-weight: 700;
-    border-radius: 3px;
+    /* font-weight: 700; */
+    /* border-radius: 3px; */
     font-size: 18px;
     padding: 20px 40px;
+    outline-color: rgba(0,0,0,0);
+    text-shadow: none;
 }
 
 /* Back to top button
@@ -797,6 +815,10 @@ ul {
     width: 80%;
     margin: auto;
 } 
+
+#portfolio {
+    display: none;
+}
 
 @media only screen and (max-width: 800px) {
     #drifting-desc {
